--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -48,9 +48,9 @@
       h3
         font-size 20px
       span
-        width 170px
+        //width 170px
         display inline-block
-        max-height 150px
+        //max-height 150px
       .user-addresses
         padding-bottom 30px
         span
