--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -722,6 +722,7 @@ transform()
     bottom 3px
 
 .fa-star
+.fa-heart
   color #CCCCCC
   font-size 16px
   margin-right 10px
@@ -729,6 +730,14 @@ transform()
   &:hover
   &.important
     color #ffea4a
+
+.fa-heart
+  margin-right 5px
+  &:hover
+  &.isLike
+    color #ff0000
+
+
 
 .itemdiv.dialogdiv > .body
   margin-left 58px
