--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -75,6 +75,7 @@
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                         ng-class="wallItem.tagColor">{{wallItem.label}}</span>
                                 <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='{{ wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
+                                <a class="fa fa-heart pull-right" ng-class="{'isLike' : wallItem.topic.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,wallItem.topic.message)"></a>
 
                                 <div class="name">
                                     <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })">{{wallItem.topic.authorName}}</a>
@@ -216,6 +217,8 @@
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                       ng-class="wallItem.tagColor">{{wallItem.label}}</span>
                                 <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='{{ wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
+                                <a class="fa fa-heart pull-right" ng-class="{'isLike' : wallItem.topic.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,wallItem.topic.message)"></a>
+
                                 <div class="clearfix"></div>
 
                                 <div>Последнее обновление:</div>
