--- a/vonline_be/war/partials/wall-single.html
+++ b/vonline_be/war/partials/wall-single.html
@@ -15,6 +15,7 @@
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                         ng-class="wallSingle.wallItem.tagColor">{{wallSingle.wallItem.label}}</span>
                                 <a class="fa fa-star pull-right" ng-class="{'important' : wallSingle.wallItem.topic.message.important == 1}" title='{{ wallSingle.wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallSingle.wallItem.topic.message)"></a>
+                                <a class="fa fa-heart pull-right" ng-class="{'isLike' : wallSingle.wallItem.topic.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,wallSingle.wallItem.topic.message)"></a>
 
                                 <div class="name">
                                     <a ui-sref="profile({userId: {{ wallSingle.wallItem.topic.userInfo.id }} })">{{wallSingle.wallItem.topic.userInfo.firstName+" "+wallSingle.wallItem.topic.userInfo.lastName}}</a>
