--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -221,8 +221,7 @@
 
                                 <div class="clearfix"></div>
 
-                                <div>Последнее обновление:</div>
-                                <div>{{wallItem.topic.lastUpdateEdit}}</div>
+                                <div>Последнее обновление: {{wallItem.topic.lastUpdateEdit}}</div>
                             </div>
                         </div>
                     </div>
