--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -91,8 +91,7 @@
 
                     <div class="clearfix"></div>
 
-                    <div>Последнее обновление:</div>
-                    <div class="align-right">{{talk.lastUpdateEdit}}</div>
+                    <div>Последнее обновление: {{talk.lastUpdateEdit}}</div>
                 </div>
             </div>
 
