--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -5,7 +5,12 @@ html {
 }
 body {
   background: #fff;
+  min-height: 100%;
+}
+body.height100 {
+  min-height: 0;
   height: 100%;
+  padding-bottom: 45px;
 }
 a {
   outline: none !important;
@@ -25,6 +30,16 @@ h1 {
   padding: 0;
   max-width: 1240px;
   min-width: 753px;
+  height: 100%;
+}
+.main-container {
+  height: 100%;
+}
+.main-container > .main-container-inner {
+  height: 100%;
+}
+.heightAuto {
+  height: auto !important;
 }
 .navbar-container {
   text-align: center;
@@ -121,6 +136,7 @@ h1 {
   bottom: 0;
   position: absolute;
   z-index: 13;
+  border-right: 0;
   background: none;
 }
 .sidebar#sidebar .show-left {
@@ -279,7 +295,8 @@ h1 {
 }
 .main-content {
   border-right: 1px solid #ccc;
-  min-height: 200%;
+  border-left: 1px solid #ccc;
+  min-height: 100%;
   margin-right: 190px;
 }
 .widget-main {
