--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -852,6 +852,9 @@ transform()
 .dialog
 .private-messages
   padding 10px
+  padding-top 15px
+  .dialogs-container
+    margin-top 15px
   h2
     margin-top 0
   .private-message-single
