pageTitle for private messages

--- a/vonline_be/war/partials/dialogs.html
+++ b/vonline_be/war/partials/dialogs.html
@@ -1,5 +1,6 @@
 
 <section class="private-messages page"> <!-- ng-show="base.privateMessagesIsActive" -->
+    <div class="page-title pull-left">{{ base.pageTitle}}</div>
     <a class="btn btn-primary no-border btn-sm pull-right" ui-sref="neighbours">Написать сообщение</a>
     <div class="clearfix"></div>
 
