--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -985,6 +985,10 @@ h1 {
   padding: 10px;
   padding-top: 15px;
 }
+.dialog .page-title,
+.private-messages .page-title {
+  padding: 0;
+}
 .dialog .dialogs-container,
 .private-messages .dialogs-container {
   margin-top: 15px;
