--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -853,6 +853,8 @@ transform()
 .private-messages
   padding 10px
   padding-top 15px
+  .page-title
+    padding 0
   .dialogs-container
     margin-top 15px
   h2
