like help message

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -861,6 +861,15 @@ h1 {
 .fa-heart.isLike {
   color: #f00;
 }
+.like-help {
+  position: absolute;
+  right: 50px;
+  top: 30px;
+  padding: 5px;
+  background: #efefef;
+  border-radius: 2px;
+  display: none;
+}
 .itemdiv.dialogdiv > .body {
   margin-left: 58px;
 }
@@ -900,6 +909,7 @@ h1 {
 .talks-title {
   padding: 10px;
   overflow: auto;
+  position: relative;
   border-top: 1px solid #5090c1;
 }
 .talks-title .talks-title-left {
