--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -753,7 +753,14 @@ transform()
   &.isLike
     color #ff0000
 
-
+.like-help
+  position absolute
+  right 50px
+  top 30px
+  padding 5px
+  background #efefef
+  border-radius 2px
+  display none
 
 .itemdiv.dialogdiv > .body
   margin-left 58px
@@ -789,6 +796,7 @@ transform()
 .talks-title
   padding 10px
   overflow auto
+  position relative
   border-top 1px solid rgb(80, 144, 193)
   .talks-title-left
     float left
