--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -88,6 +88,7 @@
                                       ng-class="talk.tagColor">{{talk.label}}</span>
                     <a class="fa fa-star pull-right" ng-class="{'important' : talk.message.important == 1}" title='{{ talk.message.importantText }}' href="#" ng-click="base.markImportant($event,talk.message)"></a>
                     <a class="fa fa-heart pull-right" ng-class="{'isLike' : talk.message.like == 1}" title='Нравится' href="#" ng-click="base.markLike($event,talk.message)"></a>
+                    <div class="like-help" id="like-help-{{talk.message.id}}">сообщение уже отмечено</div>
 
                     <div class="clearfix"></div>
 
