--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1149,6 +1149,11 @@ transform()
 
 .blog
   text-align left
+  .post
+    padding 15px 0
+    border-top 1px solid #ccc
+    &:first-child
+      border-top 0
   .dialogs
   .input-group
     display none
@@ -1166,4 +1171,20 @@ transform()
     &:hover
       color #000
       text-decoration none
+  .post-date
+    margin-left 210px;
+  .post-avatar
+    width 200px
+  .topic
+  .topic-stuff
+    margin-left 210px
+  .lenta-item-bottom
+    span
+    a
+      display inline-block
+    a
+      margin-left 5px
+  .itemdiv.dialogdiv > .body
+    padding-bottom 0
+
 
