--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -45,6 +45,11 @@
   float: none !important;
   font-size: 16px;
 }
+.login-box p,
+.signup-box p,
+.forgot-box p {
+  text-align: left;
+}
 .email-forgot-error,
 .password-new-error {
   margin-bottom: 10px;
