--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -30,6 +30,8 @@
   .btn-danger
     float none !important
     font-size 16px
+  p
+    text-align left
 
 .email-forgot-error
 .password-new-error
