--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -1,7 +1,7 @@
 
 <section class="talks-block"> <!--  ng-hide="base.isTalkTitles" -->
 
-    <section class="forum talks-single">
+    <section class="forum talks-single" infinite-scroll="talks.addMoreItems()">
 
         <div class="dd dd-draghandle">
             <ol class="dd-list">
