--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -1,5 +1,5 @@
 
-        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
+        <section class="forum page ng-cloak" ng-show="base.lentaIsActive" infinite-scroll="lenta.addMoreItems()" ng-cloak> <!--  ng-controller="LentaController as lenta" -->
             <div class="message-input clearfix">
                 <textarea ng-model="lenta.wallMessageContent" class="no-resize" ng-keyup="base.messageChange($event,1)"
                     onblur="if(this.value=='') this.value='Написать сообщение';"
