--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -653,9 +653,39 @@ h1 {
 .message-input .message-input-bottom {
   margin-top: 15px;
 }
+.message-tools {
+  margin-left: 10%;
+}
+.message-tools a {
+  color: #ccc;
+  font-size: 16px;
+}
+.message-tools .message-delete-link {
+  font-size: 20px;
+  margin-top: -11px;
+}
+.message-tools .message-delete-link:hover {
+  color: #f00;
+  text-decoration: none;
+}
+.message-tools .fa-pencil {
+  margin-top: -2px;
+  margin-right: 8px;
+}
+.message-tools .fa-pencil:hover {
+  color: #438eb9;
+}
 .hashtag {
   margin-left: 10px;
   margin-right: 10px;
+}
+.label-lg {
+  height: 18px;
+  padding: 0.2em 0.6em 0.2em;
+  line-height: 1;
+}
+.label-lg.arrowed:before {
+  border-width: 9px 6px;
 }
 .attach-area .attach-item {
   display: inline-block;
@@ -840,26 +870,32 @@ h1 {
 .lenta-item .lenta-item-bottom {
   position: absolute;
   bottom: 3px;
+  width: 100%;
+  margin-left: -95px;
+  padding-left: 95px;
+  padding-right: 15px;
 }
 .fa-star,
 .fa-heart {
   color: #ccc;
   font-size: 16px;
-  margin-right: 10px;
+  margin-right: 3px;
   margin-top: 4px;
 }
-.fa-star:hover,
-.fa-heart:hover,
-.fa-star.important,
-.fa-heart.important {
+.important-status:hover .fa-star,
+.important-status.important .fa-star {
   color: #ffea4a;
 }
-.fa-heart {
-  margin-right: 5px;
+.like-status {
+  margin-right: 10px;
 }
-.fa-heart:hover,
-.fa-heart.isLike {
+.like-status:hover .fa-heart,
+.like-status.isLike .fa-heart {
   color: #f00;
+}
+.important-status:hover,
+.like-status:hover {
+  text-decoration: none;
 }
 .like-help {
   position: absolute;
