loading in scrolling

--- a/vonline_be/war/partials/adverts-single.html
+++ b/vonline_be/war/partials/adverts-single.html
@@ -1,7 +1,7 @@
 
 <section class="talks-block">
 
-    <section class="forum adverts-single">
+    <section class="forum adverts-single" infinite-scroll="adverts.addMoreItems()">
 
         <div class="dd dd-draghandle">
             <ol class="dd-list">
