--- a/vonline_be/war/partials/settings.html
+++ b/vonline_be/war/partials/settings.html
@@ -116,7 +116,7 @@
                             <form name="formAlerts">
                             <div>
                                 <label>E-mail для оповещений :</label>
-                                <span>{{settings.userNotifications.email}}</span>
+                                <span>{{settings.userContacts.email}}</span>
                                 <br>
                                 <br>
                                 <!--<input type="email" id="settings-input-13" ng-model="settings.userNotifications.email"/>-->
