--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -766,6 +766,11 @@ transform()
     margin-left -95px
     padding-left 95px
     padding-right 15px
+  .edit-message
+    .message-textarea
+      margin 5px 0
+    .btn
+      border-width 2px
 
 .fa-star
 .fa-heart
